# chesstra

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.txt  Sanitizers.cmake  demo  presentation.url
app/: board_test.cpp  chesstra.cpp
include/: board.h  command_parser.h  display.h  game.h  pieces.h  utils.h
lib/: board.cpp  command_parser.cpp  display.cpp  game.cpp
lib/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
